Add UI for player choice

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="rockButton">Rock</button>
+    <button id="papperButton">Papper</button>
+    <button id="scissorsButton">Scissors</button>
     <script src="script.js"></script>
 </body>
 </html>
