Add UI for results

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <button id="rockButton">Rock</button>
     <button id="papperButton">Papper</button>
     <button id="scissorsButton">Scissors</button>
+    <p></p>
+    <div id="results">Results : </div>
     <script src="script.js"></script>
 </body>
 </html>
